--- a/index.html
+++ b/index.html
@@ -194,6 +194,9 @@
         <a href="index.html"><button class="button is-light-is-outlined">Home</button></a>
       </div>
       <div class="navbar-item">
+        <a class="loggedin" id="addedrecipe"><button class="button is-light-is-outlined">View My Recipes</button></a>
+      </div>
+      <div class="navbar-item">
         <a class="loggedin" id="postRecipeBtn"><button class="button is-light-is-outlined">Add Recipe</button></a>
       </div>
       <div class="navbar-item">
