--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
                 <input type="button" class="button mt-2 is-info" id="search_button" value="Search">
               </p>
               <p>
+                <a href = index.html id="allrecipes" class = "text-is-white p-3">View All Recipes</a>
+             </p>
+              <p class = "mt-6">
                 <b>About Us</b>
               </p>
               <p>
