--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DelicatelyDelicious</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
-
+  <script src="https://kit.fontawesome.com/5801cc7b40.js" crossorigin="anonymous"></script>
+  
   <style>
     body {
       background-color: rgb(67, 119, 143);
@@ -187,7 +188,7 @@
     <div class="navbar-end">
       <div class="navbar-item">
         <a href="index.html">
-          <h1 class="Nav-header">Delicately Delicious<sup class="copyright">&#174</sup></h1>
+          <h1 class="Nav-header"><i class="fas fa-seedling"> Delicately Delicious</i><sup class="copyright">&#174</sup></h1>
         </a>
       </div>
       <div class="navbar-item">
